# fairshare

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.fly  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  models.py  parbaked.toml  services.py
docker/: nginx.conf  supervisord.conf
docs/: stories.md
fly/: nginx.conf  supervisord.conf
routes/api/: groups.py  payments.py  users.py
scripts/: fly-setup.sh
server/: parbaked.toml  pyproject.toml
server/app/: auth.py  config.py  limiter.py  logging.py  main.py  seed.py
server/app/api/: auth.py  balances.py  dashboard.py  expenses.py  groups.py  payments.py  users.py
server/app/db/: models.py  session.py
server/routes/api/: balances.py  dashboard.py  expenses.py
server/tests/: conftest.py  test_auth.py  test_balances.py  test_expenses.py  test_groups.py  test_payments.py  test_splits_retroactive.py
server/tests-legacy/: README.md  test_auth.py  test_balances.py  test_groups.py  test_health.py  test_payments.py
server/web/: index.html
server/web/assets/: index-BQu3scwL.js  index-DgqfCTxk.css
tests/: test_smoke.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: AppShell.tsx  AuthGuard.tsx
web/src/components/ui/: button.tsx  input.tsx  label.tsx
web/src/lib/: api.ts  auth.ts  types.ts
web/src/pages/: CreateGroup.tsx  Dashboard.tsx  GroupDetail.tsx  Groups.tsx  Login.tsx  Register.test.tsx  Register.tsx
