[project]
name = "fairshare-server"
version = "0.1.0"
description = "FairShare — Splitwise-style expense splitting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.0.0",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "PyJWT>=2.10.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.34",
    "structlog>=25.1.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
