[project]
name = "fairshare-server"
version = "0.1.0"
description = "FairShare — Splitwise-style expense splitting, built with parbaked"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "parbaked==1.3.0a4",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
